--- a/style/style.css
+++ b/style/style.css
@@ -2,9 +2,21 @@
 
   html,
   body {
-    height: 93%;
+    height: 95%;
+
+    display: flex;
+    flex-direction: column;
     /* width: 98%; */
     /* @media (min-width: 1024px) */
+  }
+
+  html {
+    display: flex;
+    flex-direction: column;
+    flex-basis: content;
+    justify-content: center;
+
+    height: 100%;
   }
 
   header,
@@ -24,9 +36,9 @@
     padding: 5px;
   }
 
-  header>img {
-    width: 30px;
+  .westpac {
     height: 15px;
+    width: 30px;
     margin-left: 5px;
     margin-right: 5px;
   }
