--- a/style/styleMax1023pxMin768px.css
+++ b/style/styleMax1023pxMin768px.css
@@ -3,8 +3,20 @@
     html,
     body {
       height: 95%;
+
+      display: flex;
+      flex-direction: column;
       /* width: 98%; */
       /* @media (min-width: 1024px) */
+    }
+
+    html {
+      display: flex;
+      flex-direction: column;
+      flex-basis: content;
+      justify-content: center;
+
+      height: 100%;
     }
 
     header,
@@ -24,15 +36,15 @@
       padding: 5px;
     }
 
-    header>img {
-      width: 30px;
+    .westpac {
       height: 15px;
+      width: 30px;
       margin-left: 5px;
       margin-right: 5px;
     }
 
     main {
-      height: 98%;
+      height: 90%;
 
       display: flex;
       flex-direction: column;
