--- a/style/style768px.css
+++ b/style/style768px.css
@@ -35,6 +35,7 @@
       flex-direction: column;
       flex-wrap: wrap;
       padding: 5px;
+      font-size: xx-small;
     }
 
     .westpac {
@@ -69,6 +70,7 @@
     footer {
       background-color: #f44336;
       flex-direction: column;
+      font-size: xx-small;
     }
 
     .goal {
@@ -91,7 +93,7 @@
     .text {
       background-color: blue;
       color: white;
-      font-size: 1.25em;
+      font-size: 1.15em;
       /*2.4 planshet */
       font-weight: bold;
       font-family: sans-serif;
@@ -168,7 +170,7 @@
       margin-top: 20px;
       padding: 10px;
 
-      font-size: 2.5em;
+      font-size: 2.2em;
       background-color: rgba(0, 1, 0, 0.5);
       text-shadow:
         -1px -1px #FFF,
