--- a/style/style768px.css
+++ b/style/style768px.css
@@ -35,7 +35,7 @@
       flex-direction: column;
       flex-wrap: wrap;
       padding: 5px;
-      font-size: xx-small;
+      font-size: 67%;
     }
 
     .westpac {
@@ -70,7 +70,7 @@
     footer {
       background-color: #f44336;
       flex-direction: column;
-      font-size: xx-small;
+      font-size: 75%;
     }
 
     .goal {
@@ -94,7 +94,6 @@
       background-color: blue;
       color: white;
       font-size: 1.15em;
-      /*2.4 planshet */
       font-weight: bold;
       font-family: sans-serif;
       text-transform: uppercase;
@@ -150,7 +149,7 @@
       color: white;
       transition: .2s linear;
       background: #0B63F6;
-      font-size: xx-large;
+      font-size: x-large;
       margin-top: 50px;
     }
 
@@ -199,16 +198,19 @@
     .divExample {
       display: flex;
       align-items: center;
+      font-size: 400%;
     }
 
     .divAnswer {
       display: flex;
       flex-direction: column;
       align-items: center;
+      font-size: xx-large;
     }
 
     .CountingDownExamples {
       color: slateblue;
+      font-size: 1.5em;
     }
 
     p {
