--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,7 @@
     background-color: #2196F3;
 
     background-image: url(../img/background3.jpg);
-    background-size: 50%;
+    background-size: 48%;
     /* Изменение размера картинки по размеру контейнера*/
     background-position: center;
     /* Центровка картинки */
@@ -88,11 +88,12 @@
   .text {
     background-color: blue;
     color: white;
-    font-size: 3em;
-    /*2.4 planshet */
+
+    font-size: 2.4em;
     font-weight: bold;
     font-family: sans-serif;
     text-transform: uppercase;
+
     position: relative;
     user-select: none;
     padding: 5px;
@@ -165,7 +166,7 @@
     margin-top: 20px;
     padding: 10px;
 
-    font-size: 100px;
+    font-size: 3.1em;
     background-color: rgba(0, 1, 0, 0.5);
     text-shadow:
       -1px -1px #FFF,
@@ -195,6 +196,7 @@
   .divExample {
     display: flex;
     align-items: center;
+    font-size: 6em;
   }
 
   .divAnswer {
@@ -213,13 +215,13 @@
   }
 
   input {
-    height: 100px;
-    width: 120px;
+    height: 1em;
+    width: 1em;
     margin-left: 10px;
 
     /* opacity: 0.5; */
 
-    font-size: 100px;
+    font-size: 1em;
     font-weight: bold;
     text-align: center;
 
