--- a/style/asid.css
+++ b/style/asid.css
@@ -124,3 +124,12 @@
    transform: rotate(45deg) scale(1.1);
    color: #FFF;
 }
+
+@media (max-width: 768px) {
+   .side-button-1 .side-b {
+      left: 10px;
+      /* Расстояние от края окна браузера */
+      top: 60px;
+      /* Расстояние сверху */
+   }
+}
