Add a modal window with a description about the application

--- a/style/asid.css
+++ b/style/asid.css
@@ -3,6 +3,15 @@
    display: none;
 }
 
+.asid-input {
+   height: 2em;
+   width: 11em;
+}
+
+.side-title {
+   text-align: center
+}
+
 .side-panel {
    position: fixed;
    z-index: 999999;
