--- a/style/style.css
+++ b/style/style.css
@@ -262,3 +262,38 @@
     background-color: rgb(250, 67, 67);
   }
 }
+
+
+.modal {
+  display: none;
+  /* Скрыто по умолчанию */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
