--- a/style/style.css
+++ b/style/style.css
@@ -292,6 +292,7 @@
   position: absolute;
   top: 10px;
   right: 15px;
-  font-size: 20px;
+  font-size: 50px;
   cursor: pointer;
+  color: red
 }
