--- a/style/style768px.css
+++ b/style/style768px.css
@@ -213,6 +213,15 @@
       font-size: 1.5em;
     }
 
+    .result>p {
+      width: 12em;
+      color: #f44336;
+    }
+
+    .result>img {
+      width: 10em;
+    }
+
     p {
       display: flex;
       margin: 1px;
