--- a/Study/style.css
+++ b/Study/style.css
@@ -56,9 +56,11 @@ body {
 .number-coins>img {
   width: 9em;
   height: 9em;
+  margin-right: 1em;
 }
 
 .number-coins>input {
   width: 5em;
   height: 4em;
+  margin-left: 1em;
 }
