--- a/style/style768px.css
+++ b/style/style768px.css
@@ -29,6 +29,13 @@
       color: white;
     }
 
+    .block-button {
+      display: flex;
+      position: absolute;
+      top: 3em;
+    }
+
+
     header {
       background-color: #4CAF50;
       flex: 1;
