--- a/style/style.css
+++ b/style/style.css
@@ -48,13 +48,13 @@
 
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
+    justify-content: space-around;
     align-items: center;
 
     background-color: #2196F3;
 
     background-image: url(../img/background3.jpg);
-    background-size: 48%;
+    background-size: 55%;
     /* Изменение размера картинки по размеру контейнера*/
     background-position: center;
     /* Центровка картинки */
@@ -147,6 +147,12 @@
     }
   }
 
+  .block-button {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+  }
+
   .btn {
     border-radius: 10px;
     color: white;
@@ -216,7 +222,6 @@
   }
 
   p {
-    display: flex;
     margin: 1px;
   }
 
@@ -265,40 +270,74 @@
   .incorrect {
     background-color: rgb(250, 67, 67);
   }
-}
 
 
-.modal {
-  display: none;
-  /* Скрыто по умолчанию */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
+  .modal {
+    display: none;
+    /* Скрыто по умолчанию */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
 
-.modal-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  width: 300px;
+  .modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
 
-  font-size: 1em;
-  font-weight: bold;
-  text-align: center;
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
 
-}
+  }
 
-.close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 50px;
-  cursor: pointer;
-  color: red
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 50px;
+    cursor: pointer;
+    color: red
+  }
+
+  /* панель студента */
+  .info-student {
+    display: flex;
+    align-items: center;
+    text-shadow: -1px -1px #FFF, -2px -2px #FFF, -1px 1px #FFF, -2px 2px #FFF, 1px 1px #FFF, 2px 2px #FFF, 1px -1px #FFF, 2px -2px #FFF, -3px -3px 2px #BBB, -3px 3px 2px #BBB, 3px 3px 2px #BBB, 3px -3px 2px #BBB;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 1, 0, 0.5);
+    /* flex-wrap: nowrap; */
+    align-items: anchor-center;
+    text-shadow: -1px -1px #FFF, -2px -2px #FFF, -1px 1px #FFF, -2px 2px #FFF, 1px 1px #FFF, 2px 2px #FFF, 1px -1px #FFF, 2px -2px #FFF, -3px -3px 2px #BBB, -3px 3px 2px #BBB, 3px 3px 2px #BBB, 3px -3px 2px #BBB;
+
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 1, 0, 0.5);
+  }
+
+  .info-student>img {
+    height: 4em;
+  }
+
+  .info-student>.imgMotivational {
+    height: 6em;
+  }
+
+  .info-student>p {
+    font-size: 3em;
+    color: gold;
+    margin-left: 0.5em;
+    margin-right: 1em;
+  }
 }
