--- a/style/style768px.css
+++ b/style/style768px.css
@@ -21,7 +21,7 @@
   main,
   footer {
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     text-align: center;
     color: white;
@@ -54,9 +54,7 @@
 
   main {
     height: 98%;
-    display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #2196F3;
     background-image: url(../img/background3.jpg);
     background-size: 97%;
@@ -218,7 +216,7 @@
   }
 
   .result>img {
-    width: 10em;
+    width: 5em;
   }
 
   p {
