--- a/style/asid.css
+++ b/style/asid.css
@@ -134,6 +134,12 @@
    color: #FFF;
 }
 
+.close {
+   font-size: 50px;
+   cursor: pointer;
+   color: red
+}
+
 @media (max-width: 768px) {
    .side-button-1 .side-b {
       left: 10px;
